fix falses update commands